argocd/overlays/tokyo0/ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  virtualhost:
    fqdn: argocd-server.argocd.tokyo0.cybozu-ne.co
    tls:
      secretName: argocd-server-tls
  routes:
    - match: /
      timeoutPolicy:
        request: 2m
      services:
        - name: argocd-server
          port: 80
